# robert-car-part-frontend

./: .env  .prettierignore  Todo  capacitor.config.json  capacitor.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts  vite.config.ts.timestamp-1763235272213-27e3a876c04f9.mjs
.github/workflow/: android.yml
.github/workflows/: android.yml  codeql.yml
android/app/: build.gradle
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
scripts/: git-push.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/api/: authApi.ts  categoryApi.ts  notificationApi.ts  orderApi.ts  partApi.ts  userApi.ts  vehicleApi.ts
src/components/: ProtectedRoute.tsx
src/components/categories/: CategoryCard.tsx  CategoryDeleteModal.tsx  CategoryFormModal.tsx  CategoryGrid.tsx  CategoryTree.tsx  CategoryTreeItem.tsx  CategoryViewModal.tsx
src/components/notifications/: NotificationBell.tsx  (+2 more)
src/context/: AuthContext.tsx  NotificationContext.tsx
src/hooks/: authHook.ts  categoryHook.ts  notificationHook.ts  orderHook.ts  partHook.ts  useDebounce.ts  useToast.ts  useWebSocket.ts  userHook.ts  vehicleHook.ts
src/layouts/: AuthLayout.tsx  DashboardLayout.tsx
src/pages/: NotFound.tsx  UnauthorizedRole.tsx
src/provider/: AxiosClient.ts  QueryProvider.tsx
src/routes/: index.tsx
src/types/: authContext.ts  enum.ts
src/utils/: ExportCSV.tsx  errorHandler.ts  formatCurrency.ts  maskVin.ts  passwordStrength.ts  receiptGenerator.ts
src/validation/: auth.validation.ts  user.validation.ts
(+74 files in other folders)
